; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_blowfish.c_blowfish_self_test.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_blowfish.c_blowfish_self_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAIL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [25 x i8] c"E818: sha256 test failed\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"E819: Blowfish test failed\00", align 1
@OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blowfish_self_test() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @sha256_self_test()
  %3 = load i64, i64* @FAIL, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = call i32 @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @EMSG(i32 %6)
  %8 = load i64, i64* @FAIL, align 8
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %1, align 4
  br label %21

10:                                               ; preds = %0
  %11 = call i64 (...) @bf_self_test()
  %12 = load i64, i64* @FAIL, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = call i32 @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %16 = call i32 @EMSG(i32 %15)
  %17 = load i64, i64* @FAIL, align 8
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %1, align 4
  br label %21

19:                                               ; preds = %10
  %20 = load i32, i32* @OK, align 4
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %19, %14, %5
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i64 @sha256_self_test(...) #1

declare dso_local i32 @EMSG(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i64 @bf_self_test(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
